@@ -1,3 +1,8 @@
+2013-02-01  Gavin Salam  <gavin.salam@cern.ch>
+
+	* scripts/update-contribs.sh:
+	no longer query if the contrib isn't yet there.
+
 2013-02-01  Gregory Soyez  <soyez@fastjet.fr>
 
 	* scripts/internal/package.sh: (well... mostly Matteo)
